--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@types/better-sqlite3": "^7.6.13",
     "@types/sqlite3": "^3.1.11",
+    "@vercel/postgres": "^0.10.0",
     "better-sqlite3": "^11.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
